# matrix_experiment01

./: README.md
onemkl/: CMakeLists.txt  batch.sh
onemkl/src/: mm_onemkl.c
openblas/: CMakeLists.txt  CMakeLists_blas.txt  batch.sh
openblas/src/: mm_openblas.c
